<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".FinishActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_finish_activity"
        android:layout_width="match_parent"
        android:layout_marginTop="45dp"
        android:layout_height="?android:attr/actionBarSize"
        android:background="#FFFFFF" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/end"
        android:textColor="@color/colorAccent"
        android:textSize="35sp"  />

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:background="@drawable/item_circular_color_accent_border">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/start_image"
            android:src="@drawable/done" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textColor="#212121"
        android:text="@string/congratulations"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_have_done_the_workout_keep_it_up"
        android:textColor="#212121"
        android:padding="20dp"
        android:textSize="18sp"  />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="35dp"
        android:background="@color/colorAccent"
        android:text="@string/finish"
        android:fontFamily="monospace"
        android:textColor="#D1C6C6"
        android:textStyle="bold"
        android:textSize="18sp" />


</LinearLayout>