<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".BMIActivity"
    android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarBmiActivity"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="#FFFFFF" />

    <RadioGroup
        android:id="@+id/rgUnits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbarBmiActivity"
        android:layout_margin="30dp"
        android:background="@drawable/drawable_radio_group_tab_background"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbMetricUnits"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="0.50"
            android:background="@drawable/drawable_units_tab_selector"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/metric_units"
            android:textColor="@drawable/drawable_units_tab_text_color_selector"
            android:textStyle="bold"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rbUsUnits"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="0.50"
            android:background="@drawable/drawable_units_tab_selector"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/us_units"
            android:textColor="@drawable/drawable_units_tab_text_color_selector"
            android:textStyle="bold"
            android:textSize="16sp" />
    </RadioGroup>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvMetricUnitWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:placeholderTextColor="@color/black"
        app:boxStrokeColor="@color/colorAccent"
        app:hintTextColor="@color/colorAccent"
        android:layout_below="@id/toolbarBmiActivity">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etMetricUnitWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight_in_kg"
            android:inputType="numberDecimal"
            android:textSize="16sp"
            tools:ignore="MissingClass" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvMetricUnitHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvMetricUnitWeight"
       android:layout_marginTop="30dp"
        app:placeholderTextColor="@color/black"
        app:boxStrokeColor="@color/colorAccent"
        app:hintTextColor="@color/colorAccent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etMetricUnitHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/height_in_cm"
            android:inputType="numberDecimal"
            android:textSize="16sp"
            tools:ignore="MissingClass" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvUsMetricUnitWeight"
        android:layout_margin="10dp"
        app:boxStrokeColor="@color/colorAccent"
        app:hintTextColor="@color/colorAccent"
        android:layout_below="@id/rgUnits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etUsMetricUnitWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight_in_pound"
            android:inputType="numberDecimal"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <!--positioned below tilMetricUnitWeight-->

    <!--start-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_below="@id/tvMetricUnitWeight"
        android:id="@+id/tvMetricUsUnitHeightFeet"
        app:boxStrokeColor="@color/colorAccent"
        app:hintTextColor="@color/colorAccent"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_alignParentStart="true"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_toStartOf="@id/view"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etUsMetricUnitHeightFeet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/feet"
            android:inputType="numberDecimal"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_below="@+id/tvMetricUnitWeight"
        android:layout_centerHorizontal="true" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_below="@id/tvMetricUnitWeight"
        android:id="@+id/tvMetricUsUnitHeightInch"
        app:boxStrokeColor="@color/colorAccent"
        app:hintTextColor="@color/colorAccent"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/view"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etUsMetricUnitHeightInch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inch"
            android:inputType="numberDecimal"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvDisplayBMIResult"
        android:layout_below="@id/tvMetricUnitHeight"
        android:orientation="vertical"
        android:visibility="invisible"
        android:layout_marginTop="25dp"
        android:padding="10dp"
        tools:visibility="visible">

        <TextView
            android:id="@+id/tvYourBMI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/bmi"
            android:textAllCaps="true"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvBMIValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textSize="18sp"
            tools:text="15.00" />

        <TextView
            android:id="@+id/tvBMIType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textSize="18sp"
            tools:text="@string/normal" />

        <TextView
            android:id="@+id/tvBMIDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textSize="18sp"
            tools:text="@string/normal" />
    </LinearLayout>

    <Button
        android:id="@+id/btnCalculateUnits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/calculate"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="monospace"
        android:layout_below="@id/tvDisplayBMIResult" />

</RelativeLayout>